// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button mobile tests Button with link render properly 1`] = `
<Link
  className={
    Object {
      "has": [Function],
      "is": [Function],
      "mix": [Function],
      "split": [Function],
      "state": [Function],
      "toString": [Function],
    }
  }
  to="/test-button"
>
  Test link button
</Link>
`;

exports[`Button mobile tests Button with text render properly 1`] = `
<button
  className={
    Object {
      "has": [Function],
      "is": [Function],
      "mix": [Function],
      "split": [Function],
      "state": [Function],
      "toString": [Function],
    }
  }
  type="button"
>
  Test text
</button>
`;
